[gd_scene load_steps=23 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Thin.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/Back.png" type="Texture" id=4]
[ext_resource path="res://TileMapHolder.gd" type="Script" id=5]
[ext_resource path="res://background.tres" type="TileSet" id=6]
[ext_resource path="res://Hand.gd" type="Script" id=7]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-MediumItalic.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Camera2D.gd" type="Script" id=10]
[ext_resource path="res://Images/MenuIcon.png" type="Texture" id=11]
[ext_resource path="res://Menu.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Images/Fonts/Roboto/Roboto-Thin.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0.611765, 0.611765, 0.611765, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 120
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_color = Color( 0.827451, 0.827451, 0.827451, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Score:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.27451, 0.27451, 1 ), Color( 0.631373, 0.631373, 0.631373, 1 ), Color( 0.27451, 0.27451, 0.27451, 1 ) ]
}

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 500 ), Vector2( 281.823, 504.544 ), Vector2( 329.537, 431.838 ), Vector2( 300, 500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Header" type="Control" parent="Control"]
editor/display_folded = true
anchor_right = 1.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 200 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Reset" type="Button" parent="Control/Header"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 14.12
margin_top = 25.41
margin_right = 164.12
margin_bottom = 85.41

[node name="Label" type="Label" parent="Control/Header/Reset"]
margin_left = 12.5263
margin_top = 1.31577
margin_right = 162.526
margin_bottom = 146.316
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.611765, 0.611765, 0.611765, 1 )
text = "Reset
"

[node name="Score" type="Label" parent="Control/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -40.0
margin_right = 187.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.27451, 0.27451, 0.27451, 1 )
text = "0"
align = 1
valign = 1

[node name="SubScore" type="Label" parent="Control/Header"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 95.2632
margin_right = 54.0
margin_bottom = 131.263
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.476563, 0.476563, 0.476563, 1 )
text = "0"
align = 1
valign = 1

[node name="HighScoreLabel" type="Label" parent="Control/Header"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 126.0
margin_top = 57.2632
margin_right = 275.0
margin_bottom = 117.263
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.464844, 0.464844, 0.464844, 1 )
text = "0"
align = 1

[node name="HighScore" type="Label" parent="Control/Header"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -164.438
margin_top = 25.7212
margin_right = -33.4376
margin_bottom = 73.7212
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.611765, 0.611765, 0.611765, 1 )
text = "Highscore"

[node name="ScoreAnimationPlayer" type="AnimationPlayer" parent="Control/Header"]
anims/Score = SubResource( 7 )

[node name="Centre" type="Container" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -201.0
margin_bottom = 349.0
rect_min_size = Vector2( 600, 550 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Sprite" type="Sprite" parent="Control/Centre"]
modulate = Color( 1, 0.956863, 0.882353, 1 )
position = Vector2( 295.524, 217.175 )
scale = Vector2( 4.17368, 4.17368 )
texture = ExtResource( 4 )

[node name="Container2" type="Container" parent="Control/Centre"]

[node name="Container" type="Container" parent="Control/Centre"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 82.0
margin_bottom = 82.0
mouse_filter = 2

[node name="Back" type="Sprite" parent="Control/Centre/Container"]
visible = false
modulate = Color( 0.265625, 0.265625, 0.265625, 1 )
position = Vector2( 0, -240.786 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 4 )

[node name="TileMapHolder" type="Node2D" parent="Control/Centre/Container"]
position = Vector2( -264.195, -400 )
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="Control/Centre/Container/TileMapHolder"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 130, 130 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0 )

[node name="NodeHolder" type="Node2D" parent="Control/Centre/Container"]
position = Vector2( -300, -656 )

[node name="Bottom" type="Container" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -199.0
margin_bottom = 1.0
rect_min_size = Vector2( 600, 200 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="Container" parent="Control/Bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -29.5
margin_bottom = -29.5
mouse_filter = 2

[node name="Hand" type="Node2D" parent="Control/Bottom/Container"]
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Control/Bottom/Container/Hand"]

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CheckTimerFlash" type="Timer" parent="."]
wait_time = 0.04
one_shot = true

[node name="GameOver" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.281765 )

[node name="GameOver" type="Label" parent="GameOver"]
margin_left = 50.0
margin_top = 288.0
margin_right = 541.0
margin_bottom = 406.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.933594, 0.622329, 0.514206, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
text = "Game Over"

[node name="GameReset" type="Button" parent="GameOver/GameOver"]
margin_left = 164.0
margin_top = 128.0
margin_right = 328.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 9 )
text = "Reset"

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 300, 500 )
current = true
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shake = SubResource( 10 )

[node name="MenuButton" type="TextureButton" parent="."]
modulate = Color( 1, 0.960784, 0.898039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.8341
margin_top = 31.7709
margin_right = 74.1659
margin_bottom = 81.7709
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 11 )

[node name="Menu" parent="." instance=ExtResource( 12 )]
margin_top = -1000.0
margin_bottom = -1000.0

[connection signal="pressed" from="Control/Header/Reset" to="." method="_on_Reset_pressed"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
[connection signal="timeout" from="CheckTimerFlash" to="." method="_on_CheckTimerFlash_timeout"]
[connection signal="pressed" from="GameOver/GameOver/GameReset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
